UI Form - Labels updated (text-align for different screens fixed - now as "desktop" first); UI Buttons have option to align text left/right/center in case of "block" usage; reset.less has more resets now

--- a/lui/less/reset.less
+++ b/lui/less/reset.less
@@ -11,3 +11,79 @@
 }
 
 
+
+
+
+
+/* HTML 5 */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+    display: block;
+}
+
+audio,
+canvas,
+progress,
+video {
+	display: inline-block;
+	vertical-align: baseline;
+}
+
+/* DEFAULT HYPERLINKS */
+a {
+	color: inherit;
+}
+
+a:focus {
+    outline: thin dotted;
+}
+
+a:active,
+a:hover {
+    outline: 0;
+    text-decoration: none;
+}
+
+	a img {
+		border: 0;
+	}
+
+/* NO SCROLLBAR IN IE/EDGE */
+textarea {
+	overflow: auto;
+}
+
+/* PLACEHOLDER COLORFIX */
+input::placeholder {
+	color: inherit !important;
+}
+input::-moz-placeholder {
+	color: inherit !important;
+}
+input:-ms-input-placeholder {
+	color: inherit !important;
+}
+input::-webkit-input-placeholder {
+	color: inherit !important;
+}
+textarea::placeholder {
+	color: inherit !important;
+}
+textarea::-moz-placeholder {
+	color: inherit !important;
+}
+textarea:-ms-input-placeholder {
+	color: inherit !important;
+}
+textarea::-webkit-input-placeholder {
+	color: inherit !important;
+}
